kustomize-outyet/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outyet
  labels:
    app: outyet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outyet
  template:
    metadata:
      labels:
        app: outyet
    spec:
      containers:
      - name: outyet
        image: spkane/outyet:latest
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/config
      volumes:
      - name: config
        configMap:
          name: outyet
          items:
          - key: envvar
            path: variable.env
