kustomize-outyet/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outyet
  labels:
    name: outyet
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: outyet
